# ARVRSimple

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  TODO.txt
demo/: ARVRCamera.gd  BasicTest.tscn  Checker.png.import  Checkermotoslogo.svg.import  Checkermotoslogo.svg.png.import  Fps.gd  LineTest.tscn  Main.gd  Main.tscn  PowerwallCam.tscn  PowerwallCamera.gd  PowerwallSetup.tscn  PseudoWireframe.tres  Spatial.gd  Sphere.gd  Table.tscn  TableLegMat.tres  TableTopMat.tres  TrackingDebug.gd  WorldBlocksTexture.tres  checker_shader.shader  export_presets.cfg  gravel.tres  project.godot  rock_albedo.jpg.import  rock_ao.jpg.import  rock_depth.jpg.import  rock_metal.jpg.import  rock_rough.jpg.import  texture_01.png.import  texture_09.png.import  texture_rock_albedo.png.import  texture_rock_ao.png.import  texture_rock_depth.png.import  texture_rock_metal.png.import  texture_rock_normal.png.import
demo/Scenes/: Nature.tscn  Ocean.tscn
demo/Scenes/TerrainData/: color.png.import  detail.png.import  global_albedo.png.import  height.res  normal.png.import  splat.png.import
demo/addons/arvrsimple/: arvrsimple.gdns
demo/addons/powerwall/: PowerwallCam.tscn  PowerwallCamera.gd  PowerwallSetup.tscn  powerwall.gdnlib  powerwall.gdns
demo/assets/: Mat_PolygonCity_Glass_Car_Windows.material  Mat_PolygonCity_Texture_01_A.material  SK_Veh_Car_Muscle_01.FBX  SK_Veh_Car_Muscle_01.FBX.import  SK_Veh_Car_Muscle_01.tscn  seagrass.png.import
demo/assets/Dictyota/: 09 - Default.material  DictyotaSubsurface.png.import  DictyotaSubsurface_gradient.png.import  DictyotaSubsurface_gradientHeller.png.import  DictyotaSubsurface_gradientHeller_Flecken.png.import  DictyotaSubsurface_großeFlecken.png.import  Dictyota_1.FBX  Dictyota_1.FBX.import  Dictyota_1.FBX.obj.import  Dictyota_2.FBX  Dictyota_2.FBX.import  Dictyota_3.FBX  Dictyota_3.FBX.import  Dictyota_Normal_Map_16.png.import  Dictyota_Texture_16.png.import
demo/assets/Parrotfish/: Parrotfish.fbx  Parrotfish.fbx.import  Parrotfish.tscn  Parrotfish_ALPHA.png.import  Parrotfish_DIFF.png.import  Parrotfish_MAT.material  Parrotfish_NRML.png.import  Parrotfish_SPEC.png.import  Parrotfish_static.fbx  Parrotfish_static.fbx.import
demo/assets/Shipwreck/: Decks_DIFF.png.import  Decks_NRM.png.import  Decks_SPEC.png.import  Hull_DIFF.png.import  Hull_NRM.png.import  Hull_SPEC.png.import  SchipWreck.FBX  SchipWreck.FBX.import  SchipWreck.tscn  Shipwreck_Decks.material  Shipwreck_Hull.material  Shipwreck_Structure.material  Structure_DIFF.png.import  Structure_NRM.png.import  Structure_SPEC.png.import
demo/assets/Turtle/: 01 - Default.material  turtle.tscn  turtle_Normal.png.import  turtle_Texture.png.import  turtle_gExp_g.fbx  turtle_gExp_g.fbx.import
demo/assets/rock_arch/: RockArch.mtl  RockArch.obj.import  RockArch.tscn  RockArchNormal.png.import  RockArchSpecular.png.import  RockArchTex.png.import  SeepockeTex.png.import
demo/h/: ARVR Simple demo.html  ARVR Simple demo.pck
demo/textures/: Checker.png.import  Checkermotoslogo.svg.import  Checkermotoslogo.svg.png.import  Wood_10_2K.tres  Wood_10_2K_Base_Color.png.import  Wood_10_2K_Height.png.import  Wood_10_2K_Normal.png.import  Wood_10_2K_Roughness.png.import  WorldBlocksTexture.tres  checker.tres  gravel.tres  rock_albedo.jpg.import  rock_ao.jpg.import  rock_depth.jpg.import  rock_metal.jpg.import  rock_rough.jpg.import  texture_01.png.import  texture_09.png.import  texture_rock_albedo.png.import  texture_rock_ao.png.import  texture_rock_depth.png.import  texture_rock_metal.png.import  texture_rock_normal.png.import
src/: ARVRInterface.cpp  ARVRInterface.h  ARVRScreen.cpp  ARVRScreen.h  ARVRSimple.cpp  GodotCalls.cpp  GodotCalls.h  OpentrackServer.cpp  OpentrackServer.h  Powerwall.cpp  Powerwall.h  PowerwallInterface.cpp  PowerwallInterface.h  PowerwallScreen.cpp  PowerwallScreen.h  utils.h
